--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
+    "lsof": "^0.1.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
