--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
